# bird_disk_code

./: .gitignore  AGENT.md  Cargo.toml  GRAMMAR.md  README.md  SPEC.md  TASKS.md  tmp_array_sum.bd
crates/birddisk_core/: Cargo.toml
crates/birddisk_native/: Cargo.toml
crates/birddisk_native/src/: lib.rs
crates/birddisk_native_runtime/: Cargo.toml
crates/birddisk_vm/: Cargo.toml
crates/birddisk_wasm/: Cargo.toml
crates/birddiskc/: Cargo.toml
docs/: COOKBOOK.md  DECISIONS.md  DIAGNOSTICS.md  RUNTIME.md  STYLES.md
eval/: README.md  run.py  tasks.json
examples/: book_account.bd  book_point.bd  call_simple.bd  complex_sum.bd  fib.bd  minimal_main.bd  sum_while.bd  terminal_calculator.bd  when_else.bd
stdlib/: README.md
stdlib/std/: array.bd  math.bd
tests/: README.md
tests/arrays/: array_bool_flags.bd  array_empty_init.bd  array_index_expr.bd  array_literal_sum.bd  array_new_put.bd  nested_array_sum.bd
tests/bytes/: from_bytes_roundtrip.bd  string_bytes_len.bd
tests/core/: logic.bd
tests/functions/: chain_calls.bd
tests/io/: echo.bd  echo.stdin  echo.stdout  hello_print.bd
tests/loops/: nested_repeat.bd
tests/oo/: book_array_field.bd  book_counter.bd  book_default_init_put.bd  book_field_read.bd  book_return_self.bd  error_array_oob.bd  error_array_oob.error  error_constructor_arity.error  error_unknown_field.bd  error_unknown_field.error  error_unknown_method.bd
tests/stdlib/: array_i64_contains_count.bd  array_i64_utils.bd  math_abs_clamp.bd  math_add.bd  math_div.bd  math_gcd_lcm.bd  (+4 more)
vm_error_tests/: README.md
vm_tests/: README.md
(+37 files in other folders)
