[package]
name = "birddisk_native"
version = "0.1.0"
edition = "2021"

[dependencies]
birddisk_core = { path = "../birddisk_core" }
birddisk_native_runtime = { path = "../birddisk_native_runtime" }
cranelift-codegen = "0.99.2"
cranelift-frontend = "0.99.2"
cranelift-jit = "0.99.2"
cranelift-module = "0.99.2"
cranelift-native = "0.99.2"
cranelift-object = "0.99.2"
